--- a/notebooks/04_model_development_classification.ipynb
+++ b/notebooks/04_model_development_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 1,
    "id": "847a7e37",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 2,
    "id": "2a5ae8df",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 3,
    "id": "23be0ffc",
    "metadata": {},
    "outputs": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 4,
    "id": "374348ab",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 5,
    "id": "83ebe217",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 6,
    "id": "bc9bad52",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "id": "7c4c61ac",
    "metadata": {},
    "outputs": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 8,
    "id": "328053f4",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 9,
    "id": "ba27856a",
    "metadata": {},
    "outputs": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 10,
    "id": "8a697861",
    "metadata": {},
    "outputs": [
@@ -593,7 +593,13 @@
       "\n",
       "==================================================\n",
       "6. GRADIENT BOOSTING CLASSIFIER\n",
-      "==================================================\n",
+      "==================================================\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test accuracy  : 0.741\n",
       "Weighted F1    : 0.678\n",
       "Macro   F1     : 0.355\n",
@@ -644,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "id": "9ed8190c",
    "metadata": {},
    "outputs": [
@@ -707,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 12,
    "id": "760cdebd",
    "metadata": {},
    "outputs": [
@@ -770,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 13,
    "id": "e1ed1f78",
    "metadata": {},
    "outputs": [
@@ -909,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 14,
    "id": "bdd7d0b9",
    "metadata": {},
    "outputs": [
@@ -922,7 +928,7 @@
       "10. STACKING CLASSIFIER (no GaussianNB)\n",
       "==================================================\n",
       "🚀 Training stacking ensemble …\n",
-      "⏱  Training time: 2986.7 s\n",
+      "⏱  Training time: 4109.2 s\n",
       "\n",
       "STACKING RESULTS\n",
       "Accuracy   : 0.733\n",
@@ -1053,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 15,
    "id": "eb9dbc80",
    "metadata": {},
    "outputs": [
@@ -1198,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 16,
    "id": "0f144c94",
    "metadata": {},
    "outputs": [
@@ -1244,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 17,
    "id": "2fa4ec66",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 19,
    "id": "8647661c",
    "metadata": {},
    "outputs": [
@@ -1398,6 +1404,7 @@
     "\n",
     "print(f\"\\nDETAILED ANALYSIS – {best_name}\")\n",
     "print(\"=\" * 60)\n",
+    "y_true = y_test  \n",
     "\n",
     "# ------------------------------------------------------------------\n",
     "# Classification report\n",
@@ -1433,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "81e62ca6",
    "metadata": {},
    "outputs": [
@@ -1446,14 +1453,7 @@
       "============================================================\n",
       "⚠️  Converting sparse to dense …\n",
       "⚠️  Converting sparse to dense …\n",
-      "🔍 Tuning base learners …\n",
-      "🚀 Fitting tuned stacking model …\n",
-      "⏱  Training time: 2309.7 s\n",
-      "\n",
-      "TUNED STACKING – Test accuracy  : 0.679\n",
-      "TUNED STACKING – Weighted F1    : 0.707\n",
-      "\n",
-      "📈 Improvement over original weighted-F1: -2.5%\n"
+      "🔍 Tuning base learners …\n"
      ]
     }
    ],
@@ -1576,7 +1576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": null,
    "id": "df968b4e",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "id": "15d836c5",
    "metadata": {},
    "outputs": [
