added one field for star visualization

--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "64390f40",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "74e27305",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "id": "33af822d",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "2d30ac75-d450-4174-9a7a-c6e30bb6150d",
+       "ref": "a7993fce-33df-45d1-8039-b410e30611a8",
        "rows": [
         [
          "0",
@@ -522,7 +522,7 @@
        "9  Hello, thank you for shopping on Temu! Your fe...  2025-07-07T06:48:55.000Z  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "3838ac90",
    "metadata": {},
    "outputs": [
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "3c18fea4",
    "metadata": {},
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "ae92a0f8",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "385b4978",
    "metadata": {},
    "outputs": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "f465ed90",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "b0452f20",
    "metadata": {},
    "outputs": [
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "d2a7aa64",
    "metadata": {},
    "outputs": [
@@ -895,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "c59d4a7c",
    "metadata": {},
    "outputs": [
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "61cf754e",
    "metadata": {},
    "outputs": [
@@ -965,7 +965,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
+   "id": "72d7892b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "==================================================\n",
+      "TEMPORAL ANALYSIS\n",
+      "==================================================\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported Type RangeIndex",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 14\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m# Convert date column\u001b[39;00m\n\u001b[32m     10\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mReviewDate\u001b[39m\u001b[33m'\u001b[39m] = (\n\u001b[32m     11\u001b[39m     pd.to_datetime(df[\u001b[33m'\u001b[39m\u001b[33mReviewDate\u001b[39m\u001b[33m'\u001b[39m])      \n\u001b[32m     12\u001b[39m       .dt.tz_convert(\u001b[33m'\u001b[39m\u001b[33mEurope/Berlin\u001b[39m\u001b[33m'\u001b[39m)    \n\u001b[32m     13\u001b[39m )\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mReviewMonth\u001b[39m\u001b[33m'\u001b[39m] = \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mReviewDate\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m.\u001b[49m\u001b[43mdt\u001b[49m\u001b[43m.\u001b[49m\u001b[43mtz_localize\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mto_period\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mM\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     15\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mReviewDay\u001b[39m\u001b[33m'\u001b[39m]   = df[\u001b[33m'\u001b[39m\u001b[33mReviewDate\u001b[39m\u001b[33m'\u001b[39m].dt.day_name()\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Monthly trend\u001b[39;00m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Frank\\Desktop\\Studium\\ds_project\\may25_bds_supply_chain\\.venv\\Lib\\site-packages\\pandas\\core\\series.py:6046\u001b[39m, in \u001b[36mSeries.to_period\u001b[39m\u001b[34m(self, freq, copy)\u001b[39m\n\u001b[32m   6002\u001b[39m \u001b[38;5;250m\u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   6003\u001b[39m \u001b[33;03mConvert Series from DatetimeIndex to PeriodIndex.\u001b[39;00m\n\u001b[32m   6004\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m   6043\u001b[39m \u001b[33;03mPeriodIndex(['2023', '2024', '2025'], dtype='period[Y-DEC]')\u001b[39;00m\n\u001b[32m   6044\u001b[39m \u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m   6045\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(\u001b[38;5;28mself\u001b[39m.index, DatetimeIndex):\n\u001b[32m-> \u001b[39m\u001b[32m6046\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33munsupported Type \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(\u001b[38;5;28mself\u001b[39m.index).\u001b[34m__name__\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m   6048\u001b[39m new_obj = \u001b[38;5;28mself\u001b[39m.copy(deep=copy \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m using_copy_on_write())\n\u001b[32m   6049\u001b[39m new_index = \u001b[38;5;28mself\u001b[39m.index.to_period(freq=freq)\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported Type RangeIndex"
+     ]
+    }
+   ],
+   "source": [
+    "# =============================================================================\n",
+    "# Cell 4: Temporal Analysis\n",
+    "# =============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"TEMPORAL ANALYSIS\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "df['ReviewDate'] = (\n",
+    "    pd.to_datetime(df['ReviewDate'])        # String → datetime\n",
+    "      .dt.tz_convert('Europe/Berlin')       # UTC ➜ Europe/Berlin\n",
+    ")\n",
+    "\n",
+    "# 2) Zeitzone bewusst entfernen → Period\n",
+    "df['ReviewMonth'] = (\n",
+    "    df['ReviewDate']\n",
+    "      .dt.tz_localize(None)     # TZ-Dropping (keine Warnung mehr)\n",
+    "      .dt.to_period('M')        # <-- zweites .dt !\n",
+    ")\n",
+    "\n",
+    "# 3) Wochentag für jede Zeile\n",
+    "df['ReviewDay'] = df['ReviewDate'].dt.day_name()\n",
+    "\n",
+    "# Monthly trend\n",
+    "monthly_ratings = df.groupby('ReviewMonth')['ReviewRating'].agg(['mean', 'count']).reset_index()\n",
+    "monthly_ratings['ReviewMonth'] = monthly_ratings['ReviewMonth'].astype(str)\n",
+    "\n",
+    "plt.figure(figsize=(15, 10))\n",
+    "\n",
+    "# Monthly average rating\n",
+    "plt.subplot(2, 2, 1)\n",
+    "plt.plot(monthly_ratings['ReviewMonth'], monthly_ratings['mean'], marker='o', linewidth=2)\n",
+    "plt.xlabel('Month')\n",
+    "plt.ylabel('Average Rating')\n",
+    "plt.title('Average Rating Over Time')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Monthly review count\n",
+    "plt.subplot(2, 2, 2)\n",
+    "plt.bar(monthly_ratings['ReviewMonth'], monthly_ratings['count'], alpha=0.7)\n",
+    "plt.xlabel('Month')\n",
+    "plt.ylabel('Number of Reviews')\n",
+    "plt.title('Review Count Over Time')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Day of week analysis\n",
+    "daily_ratings = df.groupby('ReviewDay')['ReviewRating'].agg(['mean', 'count'])\n",
+    "day_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+    "daily_ratings = daily_ratings.reindex(day_order)\n",
+    "\n",
+    "plt.subplot(2, 2, 3)\n",
+    "daily_ratings['mean'].plot(kind='bar', color='lightgreen')\n",
+    "plt.xlabel('Day of Week')\n",
+    "plt.ylabel('Average Rating')\n",
+    "plt.title('Average Rating by Day of Week')\n",
+    "plt.xticks(rotation=45)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "\n",
+    "# Rating heatmap by day and hour\n",
+    "df['ReviewHour'] = df['ReviewDate'].dt.hour\n",
+    "rating_heatmap = df.groupby(['ReviewDay', 'ReviewHour'])['ReviewRating'].mean().unstack()\n",
+    "rating_heatmap = rating_heatmap.reindex(day_order)\n",
+    "\n",
+    "plt.subplot(2, 2, 4)\n",
+    "sns.heatmap(rating_heatmap, cmap='RdYlBu_r', center=3, annot=False)\n",
+    "plt.xlabel('Hour of Day')\n",
+    "plt.ylabel('Day of Week')\n",
+    "plt.title('Rating Heatmap by Day and Hour')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "70ee4926",
    "metadata": {},
    "outputs": [
@@ -1003,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "id": "b28ddb89",
    "metadata": {},
    "outputs": [
@@ -1043,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "7871e447",
    "metadata": {},
    "outputs": [
@@ -1101,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "id": "8225b3ae",
    "metadata": {},
    "outputs": [
@@ -1134,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "id": "9e6ca6ae",
    "metadata": {},
    "outputs": [
@@ -1186,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "id": "3ebb029a",
    "metadata": {},
    "outputs": [
@@ -1222,14 +1327,6 @@
     "print(\"5. Data quality seems good with minimal missing values\")\n",
     "print(\"6. Next step: Text preprocessing and feature engineering\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7548621b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
