update streamlit and add model parameter json csv files

--- a/notebooks/04_model_development_classification.ipynb
+++ b/notebooks/04_model_development_classification.ipynb
@@ -593,13 +593,7 @@
       "\n",
       "==================================================\n",
       "6. GRADIENT BOOSTING CLASSIFIER\n",
-      "==================================================\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "==================================================\n",
       "Test accuracy  : 0.741\n",
       "Weighted F1    : 0.678\n",
       "Macro   F1     : 0.355\n",
@@ -928,7 +922,7 @@
       "10. STACKING CLASSIFIER (no GaussianNB)\n",
       "==================================================\n",
       "🚀 Training stacking ensemble …\n",
-      "⏱  Training time: 4109.2 s\n",
+      "⏱  Training time: 2831.0 s\n",
       "\n",
       "STACKING RESULTS\n",
       "Accuracy   : 0.733\n",
@@ -1356,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "8647661c",
    "metadata": {},
    "outputs": [
@@ -1576,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "df968b4e",
    "metadata": {},
    "outputs": [
@@ -1682,116 +1676,142 @@
      "text": [
       "\n",
       "==================================================\n",
-      "SAVE MODEL ARTIFACTS\n",
+      "SAVE MODEL ARTIFACTS (LIGHTWEIGHT)\n",
       "==================================================\n",
-      "✅ Model artefacts saved:\n",
-      "   • best_classification_model.pkl\n",
-      "   • classification_comparison_results.pkl\n",
-      "   • feature_info.pkl\n",
-      "\n",
-      "🔍 Verification:\n",
-      "   • Best model: Stacking\n",
-      "   • Model type: <class 'sklearn.ensemble._stacking.StackingClassifier'>\n",
-      "   • Has predict method: True\n",
-      "\n",
-      "🎉 CLASSIFICATION PIPELINE COMPLETE\n",
-      "🏆 Champion model : StackingClassifier(cv=StratifiedKFold(n_splits=4, random_state=42, shuffle=True),\n",
-      "                   estimators=[('rf',\n",
-      "                                RandomForestClassifier(class_weight='balanced',\n",
-      "                                                       max_depth=12,\n",
-      "                                                       n_estimators=1000,\n",
-      "                                                       n_jobs=-1,\n",
-      "                                                       random_state=42)),\n",
-      "                               ('et',\n",
-      "                                ExtraTreesClassifier(class_weight='balanced',\n",
-      "                                                     max_depth=12,\n",
-      "                                                     n_estimators=1000,\n",
-      "                                                     n_jobs=-1,\n",
-      "                                                     random_state=42)),\n",
-      "                               ('xgb',\n",
-      "                                XGBClassifier(base_score=None,...\n",
-      "                                              monotone_constraints=None,\n",
-      "                                              multi_strategy=None,\n",
-      "                                              n_estimators=400, n_jobs=-1,\n",
-      "                                              num_parallel_tree=None, ...)),\n",
-      "                               ('lsvc',\n",
-      "                                CalibratedClassifierCV(cv=3,\n",
-      "                                                       estimator=LinearSVC(class_weight='balanced',\n",
-      "                                                                           max_iter=2000,\n",
-      "                                                                           random_state=42),\n",
-      "                                                       n_jobs=-1))],\n",
-      "                   final_estimator=LogisticRegression(class_weight='balanced',\n",
-      "                                                      max_iter=2000,\n",
-      "                                                      multi_class='ovr',\n",
-      "                                                      n_jobs=-1,\n",
-      "                                                      random_state=42),\n",
-      "                   n_jobs=-1, passthrough=True)\n",
-      "📊 Test accuracy  : 73.3%\n",
-      "💯 Weighted F1    : 0.725\n",
-      "💯 Macro F1       : 0.452\n"
+      "✅ Saved:\n",
+      "  • best_classification_model.pkl  (Champion for inference)\n",
+      "  • classification_summary.json / .csv  (kleines Ranking)\n",
+      "  • comparison_preds_top.npz (kompakte y_test + Top-Predictions)\n",
+      "  • results/confusion_grid_all_models.png (falls erzeugt)\n"
      ]
     }
    ],
    "source": [
     "# =============================================================================\n",
-    "# SAVE THE FINAL MODEL & METADATA\n",
+    "# SAVE THE FINAL MODEL & LIGHTWEIGHT COMPARISON ARTEFACTS\n",
     "# =============================================================================\n",
-    "import os, pickle\n",
+    "import os, json, gzip, pickle\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from datetime import datetime\n",
     "\n",
     "print(\"\\n\" + \"=\" * 50)\n",
-    "print(\"SAVE MODEL ARTIFACTS\")\n",
+    "print(\"SAVE MODEL ARTIFACTS (LIGHTWEIGHT)\")\n",
     "print(\"=\" * 50)\n",
-    "    \n",
-    "# ----------------------------------------------------------------------\n",
-    "# 1) Create model folder if missing\n",
-    "# ----------------------------------------------------------------------\n",
-    "os.makedirs(\"../src/models\", exist_ok=True)\n",
     "\n",
-    "# ----------------------------------------------------------------------\n",
-    "# 2) Get the actual trained model object\n",
-    "# ----------------------------------------------------------------------\n",
+    "os.makedirs(\"../src/models\", exist_ok=True)\n",
+    "os.makedirs(\"../results\", exist_ok=True)\n",
+    "\n",
+    "# 1) Champion speichern (für Inferenz)\n",
+    "if \"label_encoder\" not in locals():\n",
+    "    label_encoder = LabelEncoder().fit([1,2,3,4,5])\n",
     "\n",
     "best_model_dict = {\n",
-    "    \"estimator\"         : best_estimator,\n",
-    "    \"model_name\"        : best_name,\n",
-    "    \"test_accuracy\"     : best_test_acc,\n",
-    "    \"weighted_f1\"       : best_weighted_f1,\n",
-    "    \"macro_f1\"          : best_macro_f1,\n",
+    "    \"estimator\"          : best_estimator,    # der echte, gelernte Champion\n",
+    "    \"model_name\"         : best_name,\n",
+    "    \"test_accuracy\"      : float(best_test_acc),\n",
+    "    \"weighted_f1\"        : float(best_weighted_f1),\n",
+    "    \"macro_f1\"           : float(best_macro_f1),\n",
     "    \"feature_combination\": \"combined\",\n",
+    "    \"saved_at\"           : datetime.utcnow().isoformat() + \"Z\",\n",
+    "    \"label_encoder\"      : label_encoder\n",
     "}\n",
     "\n",
-    "if \"label_encoder\" not in locals():\n",
-    "    label_encoder = LabelEncoder().fit([1, 2, 3, 4, 5])\n",
-    "best_model_dict[\"label_encoder\"] = label_encoder\n",
-    "\n",
-    "# ----------------------------------------------------------------------\n",
-    "# 3) Dump pickles\n",
-    "# ----------------------------------------------------------------------\n",
+    "# Tipp: wenn du Platz sparen willst: joblib mit Kompression verwenden\n",
+    "# from joblib import dump\n",
+    "# dump(best_model_dict, \"../src/models/best_classification_model.joblib\", compress=3)\n",
     "with open(\"../src/models/best_classification_model.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(best_model_dict, f)\n",
+    "    pickle.dump(best_model_dict, f, protocol=pickle.HIGHEST_PROTOCOL)\n",
     "\n",
-    "with open(\"../src/models/classification_comparison_results.pkl\", \"wb\") as f:\n",
-    "    pickle.dump(all_results, f)\n",
+    "# ---------------- JSON-safe helpers ----------------\n",
+    "def _to_jsonable(x):\n",
+    "    \"\"\"Return a small, JSON-serializable representation of x.\"\"\"\n",
+    "    import numpy as np\n",
+    "    from sklearn.model_selection import StratifiedKFold, KFold, RepeatedStratifiedKFold\n",
     "\n",
-    "# ----------------------------------------------------------------------\n",
-    "# 4) Confirmation & Verification\n",
-    "# ----------------------------------------------------------------------\n",
-    "print(\"✅ Model artefacts saved:\")\n",
-    "print(\"   • best_classification_model.pkl\")\n",
-    "print(\"   • classification_comparison_results.pkl\")\n",
-    "print(\"   • feature_info.pkl\")\n",
+    "    # simple types\n",
+    "    if x is None or isinstance(x, (str, int, float, bool)):\n",
+    "        return x\n",
     "\n",
-    "# Verify that the saved model has predict method\n",
-    "print(f\"\\n🔍 Verification:\")\n",
-    "print(f\"   • Best model: {best_name}\")\n",
-    "print(f\"   • Model type: {type(best_estimator)}\")\n",
-    "print(f\"   • Has predict method: {hasattr(best_estimator, 'predict')}\")\n",
+    "    # numpy scalars\n",
+    "    if isinstance(x, (np.integer, np.floating)):\n",
+    "        return x.item()\n",
     "\n",
-    "print(\"\\n🎉 CLASSIFICATION PIPELINE COMPLETE\")\n",
-    "print(f\"🏆 Champion model : {best_estimator}\")\n",
-    "print(f\"📊 Test accuracy  : {best_test_acc:.1%}\")\n",
-    "print(f\"💯 Weighted F1    : {best_weighted_f1:.3f}\")\n",
-    "print(f\"💯 Macro F1       : {best_macro_f1:.3f}\")"
+    "    # small containers\n",
+    "    if isinstance(x, (list, tuple)):\n",
+    "        return [_to_jsonable(v) for v in x]\n",
+    "    if isinstance(x, dict):\n",
+    "        return {str(k): _to_jsonable(v) for k, v in x.items()}\n",
+    "\n",
+    "    # fold objects → short dict\n",
+    "    if isinstance(x, (StratifiedKFold, KFold, RepeatedStratifiedKFold)):\n",
+    "        d = {\"_type\": type(x).__name__}\n",
+    "        for k in (\"n_splits\", \"shuffle\", \"random_state\"):\n",
+    "            if hasattr(x, k):\n",
+    "                d[k] = _to_jsonable(getattr(x, k))\n",
+    "        return d\n",
+    "\n",
+    "    # anything else → class name (short and safe)\n",
+    "    return type(x).__name__\n",
+    "\n",
+    "\n",
+    "def param_preview(est):\n",
+    "    \"\"\"kleiner Parameterauszug; alles JSON-sicher.\"\"\"\n",
+    "    try:\n",
+    "        p = est.get_params()\n",
+    "    except Exception:\n",
+    "        return {}\n",
+    "    keep = (\n",
+    "        \"n_estimators\",\"max_depth\",\"C\",\"learning_rate\",\"class_weight\",\"subsample\",\n",
+    "        \"colsample_bytree\",\"max_iter\",\"n_neighbors\",\"metric\",\"voting\",\"cv\",\"dual\",\n",
+    "        \"random_state\",\"multi_class\",\"passthrough\",\"n_jobs\"\n",
+    "    )\n",
+    "    out = {}\n",
+    "    for k in p:\n",
+    "        if any(k.startswith(k2) for k2 in keep):\n",
+    "            out[k] = _to_jsonable(p[k])\n",
+    "    return out\n",
+    "\n",
+    "# ---------------- build lightweight summary rows ----------------\n",
+    "summary_rows = []\n",
+    "for r in all_results:\n",
+    "    est = r.get(\"estimator\")\n",
+    "    summary_rows.append({\n",
+    "        \"model_name\"        : r.get(\"model_name\"),\n",
+    "        \"accuracy\"          : float(r.get(\"test_accuracy\", 0.0)),\n",
+    "        \"weighted_f1\"       : float(r.get(\"weighted_f1\", 0.0)),\n",
+    "        \"macro_f1\"          : float(r.get(\"macro_f1\", 0.0)),\n",
+    "        \"weighted_precision\": float(r.get(\"weighted_precision\", 0.0)),\n",
+    "        \"weighted_recall\"   : float(r.get(\"weighted_recall\", 0.0)),\n",
+    "        \"params_preview\"    : param_preview(est) if est is not None else {},\n",
+    "    })\n",
+    "\n",
+    "# als JSON + CSV speichern (winzig, git-freundlich)\n",
+    "with open(\"../src/models/classification_summary.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    json.dump({\"saved_at\": datetime.utcnow().isoformat()+\"Z\",\n",
+    "               \"summary\": summary_rows}, f, ensure_ascii=False, indent=2)\n",
+    "\n",
+    "with gzip.open(\"../src/models/classification_comparison_results.pkl.gz\", \"wb\") as f:\n",
+    "    pickle.dump(all_results, f, protocol=pickle.HIGHEST_PROTOCOL)\n",
+    "\n",
+    "import pandas as pd\n",
+    "pd.DataFrame(summary_rows).to_csv(\"../src/models/classification_summary.csv\", index=False)\n",
+    "\n",
+    "# 3) (Optional) Minimal-Vorhersagen für Confusion-Plots – stark komprimiert\n",
+    "#    -> nur Top-Modelle & y_test, dtype=uint8, .npz\n",
+    "TOP_MODELS = {\"Stacking\",\"Soft Voting\",\"Logistic Regression\",\"LinearSVC\"}\n",
+    "predpack = {\"y_test\": np.asarray(y_test, dtype=np.uint8)}\n",
+    "for r in all_results:\n",
+    "    name = r.get(\"model_name\")\n",
+    "    if name in TOP_MODELS and r.get(\"predictions\") is not None:\n",
+    "        predpack[name.replace(\" \", \"_\")] = np.asarray(r[\"predictions\"], dtype=np.uint8)\n",
+    "np.savez_compressed(\"../src/models/comparison_preds_top.npz\", **predpack)\n",
+    "\n",
+    "print(\"✅ Saved:\")\n",
+    "print(\"  • best_classification_model.pkl  (Champion for inference)\")\n",
+    "print(\"  • classification_summary.json / .csv  (kleines Ranking)\")\n",
+    "print(\"  • comparison_preds_top.npz (kompakte y_test + Top-Predictions)\")\n",
+    "print(\"  • results/confusion_grid_all_models.png (falls erzeugt)\")"
    ]
   }
  ],
